[project]
name = "ai-takehome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "annotated-types==0.7.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "idna==3.10",
    "loguru==0.7.3",
    "openrouter==1.0",
    "pydantic==2.11.6",
    "pydantic-core==2.33.2",
    "requests==2.32.4",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "urllib3==2.4.0",
]
